sunuo (0.5.2) unstable; urgency=low

  * use .NET 2.0 for the windows build

 --

sunuo (0.5.1) unstable; urgency=low

  * impose restrictions on the invisibility spell (patch from Kai
    Sassmannshausen):
    - don't allow players to hide staff members
    - player vendors cannot be invisible
  * don't let customers buy items which have already been removed from the
    player vendor (patch from Kai Sassmannshausen)
  * no effects on hidden staff (merge from RunUO 2.0 subversion
    repository, revisions 156)
  * don't let scissors cut locked down items (merge from RunUO 2.0
    subversion repository, revisions 191)
  * fixed drop exploit (merge from RunUO 2.0 subversion repository,
    revisions 233)
  * support client version 6.0.5.0 (merge from RunUO 2.0 subversion
    repository, revisions 266)
  * use .NET 2.0 for 32 bit build in the binary distribution

 -- Max Kellermann <max@duempel.org>  Tue, 25 Dec 2007 12:04:09 +0100

sunuo (0.5.0) unstable; urgency=low

  * support client version 6 and newer (merge from RunUO 2.0 subversion
    repository, revisions 188, 193, 194, 197)
  * Makefile: add "./lib/" to MONO_PATH
  * Makefile: include "run64.bat" in distribution

 -- Max Kellermann <max@duempel.org>  Mon, 20 Aug 2007 17:58:50 +0200

sunuo (0.4.4) unstable; urgency=low

  * wake up TimerThread during shutdown
  * make Account.Limit configurable (patch by Maik Greubel)
  * new feature "quick-local-connect": do not send relay packets, re-use
    the login connection for gameplay
  * run.sh: kill SunUO process on exit
  * run.sh: don't fall back to w32 binary
  * enable the .NET server GC by default (hint from Kai Sassmannshausen)
  * upgraded Npgsql.dll to 1.0
  * ship the 64 bit / .NET 2.0 binaries for Windows
  * use xmlto instead of xsltproc + docbook-xsl

 -- Max Kellermann <max@duempel.org>  Wed, 20 Jun 2007 11:46:41 +0200

sunuo (0.4.3) unstable; urgency=low

  * make automatic world save interval configurable, patch by Maik Greubel