@@ -1,5 +1,7 @@
 sunuo (0.5.2) unstable; urgency=low
 
+  * when closing gumps, use the correct type id and remove gump from the
+    internal gump list (patch from Defiance)
   * use .NET 2.0 for the windows build
 
  --
